<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add"
        android:icon="@mipmap/ic_add_white_24dp"
        android:title="@string/add_photo"
        app:showAsAction="always" />

    <item
        android:id="@+id/my_profile"
        android:title="@string/my_profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_profile"
        android:title="@string/profile_menu"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:title="@string/logout_menu"
        app:showAsAction="never" />

</menu>